# csvdb

./: .gitignore  LICENSE  README.md  csvdb.py  example.py  main.py  requirements.txt  setup.cfg  test_datamanager.py  test_defect_db.py
data/: datatable.csv  testdata.csv
src/csvdm/: __init__.py  datamanager.py
tests/: datamanager.py
