[metadata]
name = csvdm-TWS
version = 0.1.0
author = Brian Teachman
author_email = brianteachman@gmail.com
description = A CSV file database abstraction layer (DAL) using pandas.DataFrame.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brianteachman/csvdb
project_urls =
    Bug Tracker = https://github.com/brianteachman/csvdb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src